fix old CSS properties for break inside
Fix _table_ and _figure_ werer using old CSS properties for avoiding page break

--- a/src/assets/styles/_elements.grouping.css
+++ b/src/assets/styles/_elements.grouping.css
@@ -16,5 +16,5 @@
    ----------------------------------- */
 
 figure {
-  page-break-inside: avoid;
+  @extend .u-break-inside-avoid;
 }
