--- a/src/assets/styles/_elements.tabular-data.css
+++ b/src/assets/styles/_elements.tabular-data.css
@@ -17,5 +17,5 @@
    ----------------------------------- */
 
 table {
-  page-break-inside: avoid;
+  @extend .u-break-inside-avoid;
 }
